Fix contrast error

--- a/week9/TheProphetsPage/css/prophets.css
+++ b/week9/TheProphetsPage/css/prophets.css
@@ -16,8 +16,8 @@ body > div {
   margin: 0 auto;
 }
 
-body h1 {
-  color:rgb(60, 64, 68);
+body h1, footer {
+  color: rgb(60, 64, 68);
 }
 
 body p {
